@@ -6,6 +6,8 @@ Added ability to send events asynchronously (#18) (TODO)
 Added ability to disable contracts (#11)
 Made "name" an optional argument to track_screen_view (#38)
 Changed default platform to "srv" (#37)
+Made all tracker methods chainable (#40)
+Added logging (#41) (TODO)
 
 Version 0.2.0 (2014-07-31)
 --------------------------
